name:               dorfCAD
version:            1.0
synopsis:           A small program that converts png images into quickfort blueprints
cabal-version:      >= 1.10
build-type:         Simple
license:            MIT
license-file:       LICENSE
copyright:          (c) 2013 Leif Grele
author:             Leif Grele
stability:          probably ok
data-files:         src/*.json

source-repository head
  type:             git
  location:         https://github.com/Hrothen/dorfCAD.git

executable mkblueprint
  main-is:          Main.hs
  hs-source-dirs:   src/
  other-modules:    ConvertImage,
                    Config
  default-language: Haskell2010
  build-depends:    base >= 4 && < 5,
                    bytestring >= 0.9 && < 0.11,
                    vector >= 0.9 && < 0.11,
                    containers >= 0.5,
                    JuicyPixels >= 3.0,
                    cmdlib >= 0.3.5,
                    aeson >= 0.6.1.0,
                    regex-posix >= 0.92