name:               dorfCAD
version:            1.2
synopsis:           A small program that converts png images into quickfort blueprints
cabal-version:      >= 1.10
build-type:         Simple
license:            MIT
license-file:       LICENSE
copyright:          (c) 2013 Leif Grele
author:             Leif Grele
stability:          probably ok
data-files:         src/config.json, src/alias.json

source-repository head
  type:             git
  location:         https://github.com/Hrothen/dorfCAD.git

executable mkblueprint
  main-is:          Main.hs
  hs-source-dirs:   src/
  other-modules:    ConvertImage,
                    Types,
                    Paths_dorfCAD
  default-language: Haskell2010
  build-depends:    base >= 4.8 && < 5,
                    bytestring >= 0.9,
                    vector >= 0.9,
                    containers >= 0.5,
                    JuicyPixels >= 3.0,
                    cmdargs >= 0.10.12,
                    text >= 1.2,
                    mtl >= 2.2.1,
                    parsec >= 3.1.9,
                    indents >= 0.3.3,
                    filepath >= 1.4